--- a/MA-group-sports/basketball.html
+++ b/MA-group-sports/basketball.html
@@ -11,19 +11,11 @@
         grid-row: 2;
         grid-column: 1 / span 3;
         }
-        .maina {
-      grid-row:3;
-      grid-column:1;
-  }
-  .mainb {
-      grid-row:3;
-      grid-column:2;
-  }
-  .mainc {
-      grid-row:4;
-      grid-column:1 / span 2;
-  }
-
+    /*One of the things I just learned was text dcoration and how you can put a line above the text*/
+    h2,h1,h3{
+        text-decoration: overline;
+        text-shadow:2px 2px #9654d4
+    }
     </style>
 </head>
 <body>
@@ -47,9 +39,10 @@
         <li>Eastside basketball tryouts-August 19th/20th</li>
         <li>Northwest Juniors-tbd</li>
     </ul>
-    <ul style="font-size:25 px">
+    <ul style="font-size:25px">
         <li>U15 and above tryouts:</li>
-        <li>These tryouts have already happened but make sure to keep an eye out this summer because tryouts will open again!</li>
+        <li>Tryouts just happened but dont worry because there is a spring season as well!</li>
+        <li>Spring season tryout dates will be posted in a couple months!</li>
     </ul>
 
 
@@ -57,18 +50,18 @@
 
 </div>        
 <div class="grid-item mainb">
-    <img src="images/epsvolley.png" alt="super awesome main image" width="700"height="600">
+    <img src="images/basketball.png" alt="super awesome main image" width="700"height="600">
 
 </div> 
 <div class="grid-item mainc">
-    Interview
+<h2>Interview</h2>
 </div>   
 <div class="grid-item sidenav">
     <h2>Side Nav</h2>
     <h4>Extra Reasources:</h4>
     <ul>
-        <li><a href="https://www.sivbc.org/" target="_blank">Sudden Impact Website!</a></li>
-        <li><a href="https://www.nwjuniors.org/" target="_blank">Northwest Juniors Website!</a></li>
+        <li><a href="https://www.ebconefamily.com/tryouts" target="_blank">Eastside Basketball Club Website!</a></li>
+        <li><a href="https://www.esfairportbasketball.com/tryout-information" target="_blank">Eastside-Fairport Basketball Website!</a></li>
     </ul>
 
 </div>    
