--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -51,11 +51,13 @@
 </div>
 
     <div class="grid-item main2" style="text-align: center;">
-   <img src="images/7-hills-img.webp" style="text-align: ;">
+   <img src="images/7-hills-img.webp" style="text-align: center;">
+   <h2>Interview with Ultimate Players!!</h2>
+   <h3> We have </h3>
     </div>       
          </div>
          <div class="footer">
-            Created by &copy; Ahmed and WebDesign Class Fall 2023
+            Created by &copy; Sabina Ahmed and WebDesign Class Fall 2023
          </div>
 </body>
 </html>
