--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -82,7 +82,8 @@
             </div>
 
             <div class="grid-item main-image">
-                <iframe width="516" height="315" src="https://www.youtube.com/embed/MlyZbsmVnj4?si=aEXDgWRHMfab8VOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="border: 3px solid rgb(21, 66, 106)" width="516" height="315" src="https://www.youtube.com/embed/MlyZbsmVnj4?si=aEXDgWRHMfab8VOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <!--I learned how to add a border around an embedded video-->
             </div>
 
             <div class="grid-item announcements">
@@ -118,7 +119,7 @@
     </div>
 
     <div class="footer">
-        Created by &copy; Nehmat, Sabina,Zara Web Design SportsPage
+        Created by &copy; Nehmat's Contact Page
     </div>
 
 
