--- a/MA-group-sports/basketball.html
+++ b/MA-group-sports/basketball.html
@@ -11,7 +11,20 @@
         grid-row: 2;
         grid-column: 1 / span 3;
         }
+        .maina {
+      grid-row:3;
+      grid-column:1;
+  }
+  .mainb {
+      grid-row:3;
+      grid-column:2;
+  }
+  .mainc {
+      grid-row:4;
+      grid-column:1 / span 2;
+  }
     /*One of the things I just learned was text dcoration and how you can put a line above the text*/
+    /*The other CSS thing I learned was the text shadow!*/
     h2,h1,h3{
         text-decoration: overline;
         text-shadow:2px 2px #9654d4
@@ -37,7 +50,7 @@
     <ul style="font-size:25px">
         <li>U14 and under tryouts:</li>
         <li>Eastside basketball tryouts-August 19th/20th</li>
-        <li>Northwest Juniors-tbd</li>
+        <li>Fairport Basketball</li>
     </ul>
     <ul style="font-size:25px">
         <li>U15 and above tryouts:</li>
@@ -55,7 +68,6 @@
 </div> 
 <div class="grid-item mainc">
 <h2>Interview</h2>
-</div>   
 <div class="grid-item sidenav">
     <h2>Side Nav</h2>
     <h4>Extra Reasources:</h4>
