--- a/MA-group-sports/volleyball.html
+++ b/MA-group-sports/volleyball.html
@@ -11,7 +11,11 @@
         grid-row: 2;
         grid-column: 1 / span 3;
         }
-        .maina {
+  h2,h1,h3{
+        text-decoration: overline;
+        text-shadow:2px 2px #9654d4
+    }
+    .maina {
       grid-row:3;
       grid-column:1;
   }
@@ -66,7 +70,13 @@
 
 </div> 
 <div class="grid-item mainc">
-    Interview
+<h2>Interview</h2>
+<p>Nehmat Bhutani: I have been playing volleyball for 5 years and I just signed on to Sudden Impacts 15's 
+    team! I know volleyball can be hard sometimes but it is truly such a fun sport and if you try it i'm sure 
+    you will love it!</p>
+<p>Sabina Ahmed:I have been playing volleyball for 5 years and I love volleyball so much! Volleyball is a great
+     way to build friendships and I think you should definitly tryout!</p>
+</div>   
 </div>   
 <div class="grid-item sidenav">
     <h2>Side Nav</h2>
