--- a/MA-group-sports/soccer.html
+++ b/MA-group-sports/soccer.html
@@ -22,7 +22,7 @@
 <div class="grid-item main1" style="text-align: center;">
 <img src="images/boys-ultimate-pic.png" style=" text-align: center;">
 <b><p style="text-align: center; color: rgb(68, 61, 102);">Want to try out soccer? Heres what you need to know!</p></b>
-<p style="font-size: smaller; color: rgb(25, 7, 89);"> If your wanting to play socce:</p>
+<p style="font-size: smaller; color: rgb(25, 7, 89);"> If your wanting to play soccer this year, here our dates to look out for:</p>
 <ul style="text-align: center; font-size: smaller;">
     <li>Tryouts begin in November for 9-10th Graders.</li>
     <li>Nationals and other bigger tournaments take place in spring.</li>
@@ -58,4 +58,4 @@
          </div>
 </body>
 </html>
-</div>
+</div>12
