--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -53,7 +53,23 @@
     <div class="grid-item main2" style="text-align: center;">
    <img src="images/7-hills-img.webp" style="text-align: center;">
    <h2>Interview with Ultimate Players!!</h2>
-   <h3> We have </h3>
+   <h3> We have met with a couple of Ultimate players at our school and this is what they had to say about tryouts:
+    <p>How do tryouts work?</p>
+    <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    </ul>
+   </h3>
     </div>       
          </div>
          <div class="footer">
