--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -55,19 +55,19 @@
    <h2>Interview with Ultimate Players!!</h2>
    <h3> We have met with a couple of Ultimate players at our school and this is what they had to say about tryouts:
     <p>How do tryouts work?</p>
-    <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <ul style="font-size: smaller; color: rgb(49, 49, 106);">
+    <li>The practice starts with a basic athletic warm-up, and you start with drills consisting of throwing and catching</li>
+    <li>Then you move on to scrimmiging, and you play in your posistions you want the coach to see you as</li>
+    <li> During the tryout, they pull several kids to offer them a spot, and for the rest of the tryout you continue scrimminging</li>
+    <b><li>What should you do to prep for tryouts?</li></b>
+    <li>First you should start by keeping in shape, working out constantly and stretching is the perfect way to start</li>
+    <li>Its important to practice throwing and catching, also known as your fundamentals of ultimate</li>
+    <li>Also its good to practice other skills such as running and cutting depending on your posisiton</li>
+    <li>Make sure you also stretch a lot! Its very important to prevent broken bones</li>
+    <b><li>What are some posistions you can play?</li></b>
+    <li>Handlers, They focus on throwing, bucking, accuracy, and longer range throwing</li>
+    <li>Cutters, They focus on lose defending, recieving, and short range thows </li>
+    <b><li>Note: Even if you play a specific posistion, make sure you're getting practice around all skills!</li</b>
     </ul>
    </h3>
     </div>       
