--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -56,6 +56,7 @@
    <h3> We have met with a couple of Ultimate players at our school and this is what they had to say about tryouts:
     <p>How do tryouts work?</p>
     <ul style="font-size: smaller; color: rgb(49, 49, 106);">
+        <b><li>How does the tryout start and end?</li></b>
     <li>The practice starts with a basic athletic warm-up, and you start with drills consisting of throwing and catching</li>
     <li>Then you move on to scrimmiging, and you play in your posistions you want the coach to see you as</li>
     <li> During the tryout, they pull several kids to offer them a spot, and for the rest of the tryout you continue scrimminging</li>
