--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -48,12 +48,14 @@
      <li>November 19th (1:30-3:30)</li>
      <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
     </ul>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UnNUEvs2Ev0?si=qepIe2BeXmHSk3mr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share style:" style="font-size: smaller;" allowfullscreen></iframe>
+
 </div>
 
     <div class="grid-item main2" style="text-align: center;">
    <img src="images/7-hills-img.webp" style="text-align: center;">
    <h2>Interview with Ultimate Players!!</h2>
-   <h3> We have met with a couple of Ultimate players at our school and this is what they had to say about tryouts:
+   <h3> We have met with a couple of Ultimate players at our school and this is what they had to say about tryouts:   </h3>
     <p>How do tryouts work?</p>
     <ul style="font-size: smaller; color: rgb(49, 49, 106);">
         <b><li>How does the tryout start and end?</li></b>
@@ -70,7 +72,7 @@
     <li>Cutters, They focus on lose defending, recieving, and short range thows </li>
     <b><li>Note: Even if you play a specific posistion, make sure you're getting practice around all skills!</li</b>
     </ul>
-   </h3>
+    <b><p style="font-size: small; color: rgb(4, 35, 65);">Thank you to Simeon Murray and Eli Briggs for information!</p></b>
     </div>       
          </div>
          <div class="footer">
