index and contact

--- a/MA-group-sports/contact.html
+++ b/MA-group-sports/contact.html
@@ -37,6 +37,9 @@
         .side-resources {
             grid-row: 3;
             grid-column: 3;
+            border: 10px solid transparent;
+            padding: 15px;
+            border-image: url(images/border.png) 30 stretch; 
         }
 
         .row-of-pics {
@@ -106,6 +109,7 @@
               </table>
         </div>
 
+        <!--I learned how to use an image for a border around a div-->
         <div class="grid-item side-resources">
             <h2>School Emails</h2>
             <p>Sabina Ahmed: sahmed@eastsideprep.org</p>
