--- a/MA-group-sports/contact.html
+++ b/MA-group-sports/contact.html
@@ -32,6 +32,9 @@
         .table-fun {
             grid-row: 3;
             grid-column: 1 / span 2;
+            border: 10px solid transparent;
+            padding: 15px;
+            border-image: url(images/border.png) 30 stretch; 
         }
 
         .side-resources {
@@ -45,6 +48,9 @@
         .row-of-pics {
             grid-row: 4;
             grid-column: 1 / span 3;
+            border: 10px solid transparent;
+            padding: 15px;
+            border-image: url(images/border.png) 30 stretch; 
         }
     </style>
 </head>
