--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -48,7 +48,9 @@
      <li>November 19th (1:30-3:30)</li>
      <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
     </ul>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/UnNUEvs2Ev0?si=qepIe2BeXmHSk3mr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share style:" style="font-size: smaller;" allowfullscreen></iframe>
+    <p>     </p>
+    <iframe width="280" height="200" src="https://www.youtube.com/embed/UnNUEvs2Ev0?si=qepIe2BeXmHSk3mr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share;" style="text-align: center;" allowfullscreen></iframe>
+
 
 </div>
 
