--- a/MA-group-sports/soccer.html
+++ b/MA-group-sports/soccer.html
@@ -20,15 +20,15 @@
         <h1>☆ Soccer Tryouts!! ☆</h1>
        </div>
 <div class="grid-item main1" style="text-align: center;">
-<img src="images/boys-ultimate-pic.png" style=" text-align: center;">
-<b><p style="text-align: center; color: rgb(68, 61, 102);">Want to try out soccer? Heres what you need to know!</p></b>
-<p style="font-size: smaller; color: rgb(25, 7, 89);"> If your wanting to play soccer this year, here our dates to look out for:</p>
-<ul style="text-align: center; font-size: smaller;">
-    <li>Tryouts begin in November for 9-10th Graders.</li>
-    <li>Nationals and other bigger tournaments take place in spring.</li>
-    <li>Most ultimate clubs range from having 22-24 players per team.</li>
-    <li>Ultimate Clubs have 2 seasons: December - Late March, and June - Late August.</li>
-    <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
+<img src="images/girl_soccer1.jpg" style=" text-align: center;">
+<b><p style="text-align: center; color: rgb(68, 61, 102);">Interested in Playing Soccer this spring? Heres what you need to know!</p></b>
+<p style="font-size: smaller; color: rgb(25, 7, 89);"> o take note of:</p>
+<ul style="text-align: center; font-size: smaller;">Looking to play soccer next year? here are a few valuble things to look out for:
+    <li>Tryouts begin in May for 6-12th Graders.</li>
+    <li>Nationals and other bigger tournaments take place in late spring, or even summer.</li>
+    <li>Most soccer clubs range from having 15-20ish players per team.</li>
+    <li>Soccer seasons can happen from March to Late May, or May to late August.</li>
+    <a href="https://www.crossfiresoccer.org/"><li>For more details visit Crossfire Soccer for extra info!</li></a>
 </ul>
 </div>        
     
@@ -48,14 +48,36 @@
      <li>November 19th (1:30-3:30)</li>
      <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
     </ul>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UnNUEvs2Ev0?si=qepIe2BeXmHSk3mr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share style:" style="font-size: smaller;" allowfullscreen></iframe>
+
+</div>
+
     <div class="grid-item main2" style="text-align: center;">
-        reallllll 
-    </div>   
-</div>    
+   <img src="images/girls_soccer2.jpg" style="text-align: center;">
+   <h2>Interview with Soccer Players!!</h2>
+   <h3> We have met with a couple of Ultimate players at our school and this is what they had to say about tryouts:   </h3>
+    <p>How do tryouts work?</p>
+    <ul style="font-size: smaller; color: rgb(49, 49, 106);">
+        <b><li>How does the tryout start and end?</li></b>
+    <li>The practice starts with a basic athletic warm-up, and you start with drills consisting of throwing and catching</li>
+    <li>Then you move on to scrimmiging, and you play in your posistions you want the coach to see you as</li>
+    <li> During the tryout, they pull several kids to offer them a spot, and for the rest of the tryout you continue scrimminging</li>
+    <b><li>What should you do to prep for tryouts?</li></b>
+    <li>First you should start by keeping in shape, working out constantly and stretching is the perfect way to start</li>
+    <li>Its important to practice throwing and catching, also known as your fundamentals of ultimate</li>
+    <li>Also its good to practice other skills such as running and cutting depending on your posisiton</li>
+    <li>Make sure you also stretch a lot! Its very important to prevent broken bones</li>
+    <b><li>What are some posistions you can play?</li></b>
+    <li>Handlers, They focus on throwing, bucking, accuracy, and longer range throwing</li>
+    <li>Cutters, They focus on lose defending, recieving, and short range thows </li>
+    <b><li>Note: Even if you play a specific posistion, make sure you're getting practice around all skills!</li</b>
+    </ul>
+    <b><p style="font-size: small; color: rgb(4, 35, 65);">Thank you to Tae Jaede and Leah Im for information!</p></b>
+    </div>       
          </div>
          <div class="footer">
-            Created by &copy; Ahmed and WebDesign Class Fall 2023
+            Created by &copy; Sabina Ahmed and WebDesign Class Fall 2023
          </div>
 </body>
 </html>
-</div>12
+</div>
