--- a/MA-group-sports/basketball.html
+++ b/MA-group-sports/basketball.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Grid</title>
+    <title>SportsPage</title>
    <link rel="stylesheet" href="css/style.css">
    <div class="grid-container">
     <style>
@@ -69,7 +69,8 @@
         </div> 
         <div class="grid-item mainc">
             <h2>Interview</h2>
-            <p>Anonymus: Basketball is a really reall fun sport in which there is so much to love. I love playing on the court and leaving on my thoughts off of it. Basketball helps me to calm myself down and keep my spirits up. Basketball is truly an amazing sport and im sure you will love it!!</p>
+            <p>Anonymus:</p>
+            <p> Basketball is a really reall fun sport in which there is so much to love. I love playing on the court and leaving on my thoughts off of it. Basketball helps me to calm myself down and keep my spirits up. Basketball is truly an amazing sport and im sure you will love it!!</p>
         </div>
 
             <div class="grid-item sidenav">
