--- a/MA-group-sports/soccer.html
+++ b/MA-group-sports/soccer.html
@@ -34,7 +34,33 @@
     
 <div class="grid-item sidenav" style="text-align: center;">
     <b><p style="text-align: center; color: rgb(68, 61, 102);">Tryout Info!!</p></b>
-    <img src="images/tryout-sched.webp" style="text-align: center; height: 200px; width: 280px;">
+  <table>
+    <table class="table" style="font-size: smaller;">  
+        <tr>
+            <th>Girl Tryouts (U13s-U15s)</th>
+          <th>U13s - </th>
+          <th>U14s - </th>
+          <th>U15s - </th>
+        </tr>
+        <tr>
+          <td>Girls Tryouts (U16s-U18s)</td>
+          <td>U16s - </td>
+          <td>U17s - </td>
+          <td>U18s - </td>
+        </tr>
+        <tr>
+          <td>Boys Tryouts (U13s-U15s)</td>
+          <td>U13s - </td>
+          <td>U14s - </td>
+          <td>U15s - </td>
+        </tr>
+        <tr>
+            <td>Boys Tryouts (U16s-U18s) </td>
+            <td>U16s - </td>
+            <td>U17s - </td>
+            <td>U18s - </td>
+        </tr>
+  </table>
     <p style="font-size: small; color: rgb(25, 7, 89);"> The table above shows the entire tryout schedule for an Ultimate club called 7 hills</p>
     <p style="font-size: small; color: rgb(25, 7, 89);"> Here are some major dates to take note of:</p>
     <ul style="font-size: smaller;">
