ignore this spelling mistake

--- a/MA-group-sports/soccer.html
+++ b/MA-group-sports/soccer.html
@@ -22,7 +22,7 @@
 <div class="grid-item main1" style="text-align: center;">
 <img src="images/girl_soccer1.jpg" style=" text-align: center;" width="800px" height="600px">
 <b><p style="text-align: center; color: rgb(68, 61, 102);">Interested in Playing Soccer this spring? Heres what you need to know!</p></b>
-<p style="font-size: smaller; color: rgb(36, 34, 41);"> o take note of:</p>
+<p style="font-size: smaller; color: rgb(36, 34, 41);"> Heres some things to take note of:</p>
 <ul style="text-align: center; font-size: smaller;">Looking to play soccer next year? here are a few valuble things to look out for:
     <li>Tryouts begin in May for 6-12th Graders.</li>
     <li>Nationals and other bigger tournaments take place in late spring, or even summer.</li>
