pushing content lubrary

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
             <li><a href="css_grid/index.html"></a>CSS Grid Practice</li>
             <li><a href="MA-group-sports/index.html">MA Group Project</a></li>
+            <li><a href="two-truths/index.html">Two Truths and A Lie</a></li>
         </ul>
 
         <h1 class="center">Intro</h1>
