--- a/two-truths/index.html
+++ b/two-truths/index.html
@@ -13,6 +13,14 @@
 
     <hr>
 
+    <h2>Secret Message!</h2>
+    <p id="secret"></p>
+    <button onclick="reveal()" >Reveal!</button>
+
+    <button onclick="getElementById('secret').style.display='none'">Hide!</button>
+
+    <hr>
+
     <form>
         <label for="fname">first name:</label><br>
         <input type="text" id="fname" name="myName"><br>
@@ -48,7 +56,8 @@
         <script>
 
             function reveal() {
-                
+                document.getElementById('secret').innerHTML='shhhh very very secret';
+                getElementById('secret').style.display='block';
             }
 
             function hello() {
