--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="css_grid/index.html"></a>CSS Grid Practice</li>
             <li><a href="MA-group-sports/index.html">MA Group Project</a></li>
             <li><a href="two-truths/index.html">Two Truths and A Lie</a></li>
+            <li><a href="bootstrap_demo/index.html">BootStrap Mess-Around</a></li>
         </ul>
 
         <h1 class="center">Intro</h1>
