--- a/sivbc_remake/index.html
+++ b/sivbc_remake/index.html
@@ -7,12 +7,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="alumni.html">Alumni</a></li>
+        <li><a href="beach.html">Beach</a></li>
+        <li><a href="scholars.html">Scholarship</a></li>
+    </ul>
+    
+
+    <br>
+
+    <img src=""
+
+    <br>
+
     <div class="grid-container">
-
         
+        <div class="grid-item contact-info">
+            <p>Contact Information for Sudden Impact!
+            </p>
+        </div>
 
-
-
+        <div class="grid-item announce">
+            <p>Announcement Box!</p>
+        </div>
 
     </div>
 </body>
