--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="MA-group-sports/index.html">MA Group Project</a></li>
             <li><a href="two-truths/index.html">Two Truths and A Lie</a></li>
             <li><a href="bootstrap_demo/index.html">BootStrap Mess-Around</a></li>
+            <li><a href="sivbc_remake/index.html">SIVBC Remake</a></li>
         </ul>
 
         <h1 class="center">Intro</h1>
