--- a/sivbc_remake/about.html
+++ b/sivbc_remake/about.html
@@ -15,6 +15,42 @@
         <li><a href="beach.html">Beach</a></li>
         <li><a href="scholars.html">Scholarship</a></li>
     </ul>
+
+    <br>
+    <h1 style="text-align:center;color: rgb(103, 11, 11)">About SIVBC</h1>
+    <br>
+
+    <div class="grid-container">
+        <div class="grid-item why">
+            <h2>Why SIVBC?</h2>
+            <p>Are you a serious volleyball player looking to train with other like-minded players?  Do you want access to the best technically trained group of coaches in the Pacific Northwest?  If the answer is “YES!” to these questions here is why you should consider playing for SIVBC.</p>
+            <ol>
+                <li>- SIVBC has combined coaching experience of over 200 years.</li>
+                <li>- SIVBC has qualified teams for USA Junior National Championships across all age groups from U12-U18 in the last 10 years.</li>
+                <li>- SIVBC has coaches with collegiate experience with the University of Washington, Seattle University, and Northwest University.</li>
+                <li>- SIVBC has placed athletes in collegiate programs throughout the country from Division I to NAIA.</li>
+                <li>- SIVBC has a dedicatd practice facility centrally located in Bellevue that is home to all SIVBC teams.</li>
+            </ol>
+            </ul>
+        </div>
+
+        <div class="grid-item mission">
+            <h2>Mission Statement</h2>
+            <p>Sudden Impact’s mission is to provide the best training for junior volleyball players in the Puget Sound Region.  We believe a competitive athletic experience will enhance social development, contribute to mental and physical health, and teach the values of teamwork, responsibility, self-discipline, and self-motivation.  We strive to take each player to a higher level of competitiveness while maintaining her love for the game.</p>
+        </div>
+
+        <div class="grid-item cphil">
+            <h2>Coaching Philosophy</h2>
+            <p>We employ the Gold Medal Squared coaching philosophy and methodology. We have applied these skills and coaching techniques among all of our teams over the past 11 years to fortify a strong, consistent framework for all our athletes to improve their skills as volleyball players. Through this consistent way of teaching, we continue to develop a winning club program throughout all of our age groups. Whether a player is 10 or 18, she will be taught the same principles of volleyball in a positive way that will develop her into a better volleyball player.</p>
+        </div>
+
+
+
+    </div>
+
+    <img src="images/one-coach.jpeg" width="500px" height="600px">
+
+    <img src="images/cropjustmich.png" float="right" width="700px">
     
 </body>
 </html>
