--- a/sivbc_remake/index.html
+++ b/sivbc_remake/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nehmat Final Project | SIVBC Remake</title>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+      function myFunction () {
+        alert("Warning! You are going to a different website");
+      }
+    </script>
     <style>
        
        .container {
@@ -124,7 +129,7 @@
           <div class="grid-item fprograms container">
             <img src="images/fall-programs.png" alt="Avatar" class="image">
             <div class="overlay">
-              <div class="text">                    
+              <div class="text" style="font-size: 13px;">                    
                 <h2>Fall Programs</h2>
                 <h3><a href="https://www.sivbc.org/_files/ugd/59e34b_d77ce057995e4c5dad3bba4bb242d0dd.pdf" style="color: black">2023 Fall Youth Clinic</a></h3>
                 <p>Clinics for club players</p>
@@ -139,7 +144,7 @@
                 <p>Choose from one of two sessions.</p>
                 <p>Session #1 - TUESDAY: 7:00-8:30PM (9/12 to 10/17)</p>
                 <p>Session #2 - THURSDAY: 7:00-8:30PM (9/14 to 10/19)</p>
-                <h3><a href="https://app.upperhand.io/customers/911-sudden-impact-volleyball-club/events" style="color: black;">Register Here</a></h3>
+                <h3><a href="https://app.upperhand.io/customers/911-sudden-impact-volleyball-club/events" style="color: black;" onclick="myFunction()">Register Here</a></h3>
                 </div>
             </div>
           </div>
