--- a/sivbc_remake/faq.html
+++ b/sivbc_remake/faq.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nehmat Final Project | SIVBC Remake</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .grid-container-one {
+            display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 1fr 1fr; 
+        font-family:'Segoe UI', Tahoma, Verdana, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <ul>
@@ -15,6 +23,36 @@
         <li><a href="beach.html">Beach</a></li>
         <li><a href="scholars.html">Scholarship</a></li>
     </ul>
+
+    <br>
+    <h1 style="text-align: center; color: rgb(103, 11, 11)">FAQ!</h1>
+    <h2>Our Answers To General Questions About Club</h2>
+    <br>
+
+    <div class="grid-container-one">
+        <div class="grid-item one">
+            <h2>What is club volleyball?</h2>
+            <p>Club volleyball is much like other select sports. There are open tryouts for team selections after which teams will practice 2-3 times per week and play a tournament approximately every other weekend for 4 – 7 months depending on the age group.</p>
+        </div>
+
+        <div class="grid-item two">
+            <h2>What are the age group definitions for 22-23 season?</h2>
+            <p>More details on age group definitions can be found by reviewing the USA Volleyball</p>
+            <p>Junior Player Age Definitions. Age group definitions for 2022-23 season are as follows:</p>
+            <p>U18 – Players born on or after July 1, 2005 or Player born on or after July 2004 and a high school student in the twelfth grade.</p>
+            <p>U17 – Players born on or after July 1, 2006 </p>
+            <p>U16 – Players born on or after July 1, 2007 </p>
+            <p>U15 – Players born on or after July 1, 2008</p>
+            <p>U14 – Players born on or after July 1, 2009 </p>
+            <p>U13 – Players born on or after July 1, 2010 </p>
+            <p>U12 – Players born on or after July 1, 2011 </p>
+            <p>U11 – Players born on or after July 1, 2012</p>
+        </div>
+
+        <div class="grid-item three">
+            <h2>How old do I have to be to start playing?</h2>
+        </div>
+    </div>
     
 </body>
 </html>
