faq questions done

--- a/sivbc_remake/faq.html
+++ b/sivbc_remake/faq.html
@@ -51,6 +51,53 @@
 
         <div class="grid-item three">
             <h2>How old do I have to be to start playing?</h2>
+            <p>We have had players as young as nine years old playing on our U12 teams in past years. The earlier the athlete is introduced to the sport of volleyball the more likely they are to develop the correct technique.</p>
+        </div>
+
+        <div class="grid-item four">
+            <h2>When and where are games played?</h2>
+            <p>Club volleyball is arranged by age groups and tournaments are held on weekends. Most local tournaments are one-day events held in the greater Seattle/Tacoma area, and most regional or national tournaments are three-day events. Each day of a tournament is an all-day affair typically starting about 8:00am and ending around 6:00pm with teams playing multiple matches in a day.</p>
+        </div>
+
+        <div class="grid-item five">
+            <h2>What kind of organization is Sudden Impact?</h2>
+            <p>SUDDEN IMPACT VOLLEYBALL CLUB is a registered Non-Profit Corporation in the State of Washington with 501(c)(3) status and is a member in good standing within the Puget Sound Region of USA Volleyball.</p>
+        </div>
+
+        <div class="grid-item six">
+            <h2>When are tryouts?</h2>
+            <p>SIVBC will announce its tryout dates/times in early fall. The Puget Sound Region sets the tryout date window for all ages in the region, and in the past several years has set tryouts as follows: U12-U14 age groups in the last weekend in Oct. U15-U18 age groups the week of July 15th. Please watch the front page of this website for SIVBC’s actual tryout dates/times.</p>
+        </div>
+
+        <div class="grid-item seven">
+            <h2>What age groups are you offering in the 23-24 season?</h2>
+            <p>SIVBC typically offer two teams in each age group from U12-U16, U17-U18 one or more teams are offered. As we get closer to tryouts, we will announce which age groups SIVBC will be offering.</p>
+        </div>
+
+        <div class="grid-item eight">
+            <h2>Where do you practice?</h2>
+            <p>All of our teams will practice at the I-90 Volleyball Center in Bellevue located at 13405 SE 30th
+            Street, Suite 1B, Bellevue, WA  98005.  Teams typically will practice for two hours on either a Monday/Wednesday or Tuesday/Thursday schedule from as early as 4:00pm to as late as 9:55pm with additional practices for some teams held on non-tournament playing weekends.</p>
+        </div>
+
+        <div class="grid-item nine">
+            <h2>How competitive are your teams?</h2>
+            <p>SIVBC teams are typically ranked among the region’s best, with many of our players earning all-league, all-area and all-state recognition at the high school level, with some garnering recognition at the national level. Many of our athletes go on to play at the collegiate level. SIVBC requires each athlete to be highly committed to their teams practice and tournament schedule.</p>
+        </div>
+
+        <div class="grid-item ten">
+            <h2>What are your teams?</h2>
+            <p>Our per-team fee structure for the 2023-2024 season will be available at our tryouts.</p>
+        </div>
+
+        <div class="grid-item eleven">
+            <h2>What do your fees cover?</h2>
+            <p>SIVBC traditionally offers an “all in” fee structure where the entire season cost, including all travel costs for players, coaches, and one chaperone per team, are included in our fee structure. SIVBC’s fee structure is commensurate with other top tier clubs within the region where travel to national qualifying tournaments and a season-ending national championship tournament, for some teams, is included in the fee structure.</p>
+        </div>
+
+        <div class="grid-item twelve">
+            <h2>Do your teams travel and compete nationally?</h2>
+            <p>Older teams travel more than younger teams as exposure to college recruiting becomes an important part of the game. Specific team schedules for the 2023-2024 season will be available at our tryouts.</p>
         </div>
     </div>
     
